# Lab5

./: CMakeLists.txt
task1/: binary_int.cpp  binary_int.h  main5-1.cpp
task2/: Encoder.cpp  Encoder.h  encoder.h  main5-2.cpp
task3/: logical_values_array.cpp  logical_values_array.h  main5-3.cpp
task4/: Complex_Numbers.cpp  Complex_Numbers.h  main5-4.cpp
task6/: main5-6.cpp  vector.cpp  vector.h
task7/: classes.cpp  classes.h  main5-7.cpp
